Tweak cycle copy

--- a/app/views/new/applications-open.html
+++ b/app/views/new/applications-open.html
@@ -28,7 +28,7 @@
         <!--
           If before cycle has opened:
           {
-            name: 'On 21 October 2019 when applications for this cycle open'
+            name: 'On 21 October 2019 when applications for the 2020/21 cycle open'
           }
         -->
         {% set fields = [
