Add initial new training location flow

--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -72,6 +72,6 @@
   </table>
 
   <p class="add-top-margin">
-    <a href="/new/start" class="govuk-button">Add a new training location</a>
+    <a href="/new-location/start" class="govuk-button">Add a new training location</a>
   </p>
 {% endblock %}
