--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -38,40 +38,28 @@
     </div>
   </div> -->
 
-  <table class="govuk-table">
-    <thead class="govuk-table__head">
-      <tr class="govuk-table__row">
-        <th class="govuk-table__header" style="width: 40px">Code</th>
-        <th class="govuk-table__header" scope="col">Name</th>
-        <th class="govuk-table__header" scope="col">Label</th>
-        <!-- <th class="govuk-table__header" style="width: 20%">Courses</th>
-        <th class="govuk-table__header" style="width: 20%">Content</th> -->
-      </tr>
-    </thead>
-    <tbody class="govuk-table__body">
-      {% for school in schools %}
-      <tr class="govuk-table__row">
-        <td class="govuk-table__cell"><strong class="bold-medium">{{ school.code }}</strong></td>
-        <td class="govuk-table__cell">
-          <a href="/location/{{ school.code }}" class="bold">{{ school.name }}</a><br />
-          {{ school.address }}
-        </td>
-        <td class="govuk-table__cell">
-          {% for type in data[school.code + '-type'] %}
-            <span class="govuk-tag phase-tag-small">{{ type }}</span><br />
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <table class="govuk-table">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="col">Name</th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          {% for school in schools %}
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">
+              <a href="/location/{{ school.code }}" class="bold">{{ school.name }}</a>
+            </td>
+          </tr>
           {% endfor %}
-          {% if not data[school.code + '-type'] %}
-            <span class="govuk-tag phase-tag-small phase-tag-no-content">None</span>
-          {% endif %}
-        </td>
-        <!-- <td class="govuk-table__cell">5 courses</td>
-        <td class="govuk-table__cell"><span class="govuk-tag phase-tag-small phase-tag-no-content">Empty</span></td> -->
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+        </tbody>
+      </table>
 
-  <p class="add-top-margin">
-    <a href="/new-location/start" class="govuk-button">Add a new training location</a>
-  </p>
+      <p class="add-top-margin">
+        <a href="/new-location/start" class="govuk-button">Add a new training location</a>
+      </p>
+    </div>
+  </div>
 {% endblock %}
