Allow editing of training locations

--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -50,7 +50,7 @@
           {% for school in schools %}
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">
-              <a href="/location/{{ school.code }}" class="bold">{{ school.name }}</a>
+              <a href="/new-location/{{ school.code }}/edit" class="govuk-!-font-weight-bold">{{ school.name }}</a>
             </td>
           </tr>
           {% endfor %}
