--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -26,6 +26,8 @@
     <li>add new training locations</li>
   </ul>
 
+  <p>You are limited to 37 training locations by UCAS Apply.</p>
+
   <!-- <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">Locations applicants can choose</h2>
@@ -33,7 +35,6 @@
 
       <p>When an applicant searches by location we use the address of each location to determine how far away each course is from them.</p>
 
-      <p>You are limited to 36 training locations by UCAS.</p>
       {% set schools = data['schools'] %}
     </div>
   </div> -->
