Tweak back links and breadcrumbs

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -14,6 +14,10 @@
         {
           href: "/",
           text: data['training-provider-name']
+        },
+        {
+          href: "/courses",
+          text: 'Courses'
         }
       ]
     })
