Add college to type

--- a/app/views/new-location/type.html
+++ b/app/views/new-location/type.html
@@ -12,13 +12,13 @@
       <form action="{{ paths.next }}" method="post">
         {% set fields = [
             {
-              name: 'A school or university'
+              name: 'A school, college or university'
             },
             {
               name: 'A region or area'
             },
             {
-              name: 'A place that’s not a school or university'
+              name: 'A place that’s not a school, college or university'
             }
           ]
         %}
