--- a/app/views/new-location/pick-location.html
+++ b/app/views/new-location/pick-location.html
@@ -1,4 +1,4 @@
-{% set title = 'Pick a school or university' %}
+{% set title = 'Pick a school, college or university' %}
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
@@ -10,8 +10,17 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form action="{{ paths.next }}" method="post">
+
+
         <div class="govuk-form-group">
-          <label for="my-autocomplete" class="govuk-label">Find by name, postcode or URN number</label>
+          <label for="my-autocomplete" class="govuk-label">
+            <p>Find schools, colleges and universities using either:</p>
+            <ul class="govuk-list govuk-list--bullet">
+              <li>name</li>
+              <li>postcode</li>
+              <li>unique reference number (URN)</li>
+            </ul>
+          </label>
           <div id="my-autocomplete-container"></div>
         </div>
 
