Indicate when route not yet built

--- a/app/views/new-location/type.html
+++ b/app/views/new-location/type.html
@@ -15,10 +15,12 @@
               name: 'A school, college or university'
             },
             {
-              name: 'A region or area'
+              name: 'A region or area',
+              more: '<p class="govuk-error-message">Sorry, this option hasn’t been built yet</p>'
             },
             {
-              name: 'A place that’s not a school, college or university'
+              name: 'A place that’s not a school, college or university',
+              more: '<p class="govuk-error-message">Sorry, this option hasn’t been built yet</p>'
             }
           ]
         %}
