Add screen for checking name and address

--- a/app/views/new-location/edit.html
+++ b/app/views/new-location/edit.html
@@ -1,4 +1,4 @@
-{% set title = location.name %}
+{% set title = data[code + '-name'] %}
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink('/locations') }}{% endblock %}
