--- a/app/views/new-location/_answers.html
+++ b/app/views/new-location/_answers.html
@@ -24,17 +24,32 @@
     </a>
   </dd>
 </div> -->
+{% if data[code + '-location-picked'] %}
+  <div class="app-check-your-answers__contents">
+    <dt class="app-check-your-answers__question">
+      Location picked
+    </dt>
+    <dd class="app-check-your-answers__answer">
+      {{ data[code + '-location-picked'] }}
+    </dd>
+    <dd class="app-check-your-answers__change">
+      <a href="/new-location/{{ code }}/pick-location?change=pick-location">
+        Change<span class="govuk-visually-hidden"> location</span>
+      </a>
+    </dd>
+  </div>
+{% endif %}
 <div class="app-check-your-answers__contents">
   <dt class="app-check-your-answers__question">
     Name
   </dt>
   <dd class="app-check-your-answers__answer">
-    {{ location.name }}
+    {{ data[code + '-name'] }}
   </dd>
   <dd class="app-check-your-answers__change">
-    <a href="/new-location/{{ code }}/pick-location?change=pick-location">
+    <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
       Change<span class="govuk-visually-hidden"> location</span>
-    </a>
+    </a> -->
   </dd>
 </div>
 <div class="app-check-your-answers__contents">
@@ -42,69 +57,45 @@
     Address
   </dt>
   <dd class="app-check-your-answers__answer">
-    {{ location.address }}<br />
-    {{ location.town or location.county }}<br />
-    {{ location.postcode }}
+    {{ data[code + '-address']}}<br />
+    {{ data[code + '-town'] or data[code + '-county'] }}<br />
+    {{ data[code + '-postcode'] }}
   </dd>
   <dd class="app-check-your-answers__change">
-    <a href="/new-location/{{ code }}/pick-location?change=pick-location">
+    <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
       Change<span class="govuk-visually-hidden"> location</span>
-    </a>
+    </a> -->
   </dd>
 </div>
-<!-- <div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
-    Town or city
-  </dt>
-  <dd class="app-check-your-answers__answer">
-    {{ location.city }}
-  </dd>
-  <dd class="app-check-your-answers__change">
-    <a href="/new-location/{{ code }}/pick-location?change=pick-location">
-      Change<span class="govuk-visually-hidden"> location</span>
-    </a>
-  </dd>
-</div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
-    Postcode
-  </dt>
-  <dd class="app-check-your-answers__answer">
-    {{ location.postcode }}
-  </dd>
-  <dd class="app-check-your-answers__change">
-    <a href="/new-location/{{ code }}/pick-location?change=pick-location">
-      Change<span class="govuk-visually-hidden"> location</span>
-    </a>
-  </dd>
-</div> -->
 <div class="app-check-your-answers__contents">
   <dt class="app-check-your-answers__question">
     Website
   </dt>
   <dd class="app-check-your-answers__answer">
-    <a href="{{ location.url }}" rel="noopener noreferrer" target="_blank">{{ location.url }}</a>
+    <a href="{{ data[code + '-url'] }}" rel="noopener noreferrer" target="_blank">{{ data[code + '-url'] }}</a>
   </dd>
   <dd class="app-check-your-answers__change">
-    <a href="/new-location/{{ code }}/pick-location?change=pick-location">
+    <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
       Change<span class="govuk-visually-hidden"> website</span>
-    </a>
+    </a> -->
   </dd>
 </div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
-    Unique reference number (URN)
-  </dt>
-  <dd class="app-check-your-answers__answer">
-    {{ location.urn }}<br />
-    <a rel="noopener noreferrer" target="_blank" class="govuk-body-s" href="https://get-information-schools.service.gov.uk/Establishments/Establishment/Details/{{ location.urn }}">View on the Get information about schools service</a>
-  </dd>
-  <dd class="app-check-your-answers__change">
-    <a href="/new-location/{{ code }}/pick-location?change=pick-location">
-      Change<span class="govuk-visually-hidden"> location</span>
-    </a>
-  </dd>
-</div>
+{% if data[code + '-urn'] %}
+  <div class="app-check-your-answers__contents">
+    <dt class="app-check-your-answers__question">
+      Unique reference number (URN)
+    </dt>
+    <dd class="app-check-your-answers__answer">
+      {{ data[code + '-urn'] }}<br />
+      <a rel="noopener noreferrer" target="_blank" class="govuk-body-s" href="https://get-information-schools.service.gov.uk/Establishments/Establishment/Details/{{ data[code + '-urn'] }}">View on the Get information about schools service</a>
+    </dd>
+    <dd class="app-check-your-answers__change">
+      <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
+        Change<span class="govuk-visually-hidden"> location</span>
+      </a> -->
+    </dd>
+  </div>
+{% endif %}
 <div class="app-check-your-answers__contents">
   <dt class="app-check-your-answers__question">
     UCAS campus code
