Add vacancies text back

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -42,6 +42,7 @@
           <li>create, preview and publish courses</li>
           <li>write about each course</li>
           <li>copy content between courses</li>
+          <li>manage vacancies for each course</li>
         </ul>
       </div>
       <div class="govuk-!-margin-bottom-8">
