--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,6 +11,13 @@
       <h2 class="govuk-heading-m">January 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/preparing-for-locations">Preparing for more features</a>
+      </h3>
+      <p>
+        Updating the organisation and courses pages to accmmodate new features being added as part of UCAS transition.
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/edit-course-workflow">Edit course information workflow</a>
       </h3>
       <p>
