Document new training location flow

--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -11,10 +11,17 @@
       <h2 class="govuk-heading-m">January 2019</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/new-training-location">Add training location wizard</a>
+      </h3>
+      <p>
+        Add a training location in Publish rather than UCAS.
+      </p>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
         <a href="/history/preparing-for-locations">Preparing for more features</a>
       </h3>
       <p>
-        Updating the organisation and courses pages to accmmodate new features being added as part of UCAS transition.
+        Updating the organisation and courses pages to accommodate new features being added as part of UCAS transition.
       </p>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
