Customise alert messages

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="#">About your organisation</a>
+          <a href="#" data-message="This feature is currently unavailable">About your organisation</a>
         </h2>
 
         <!-- <p>
