--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -176,7 +176,7 @@
     </div>
   {% endif %}
 {% endif %}
-<div class="app-check-your-answers__contents">
+<!-- <div class="app-check-your-answers__contents">
   <dt class="app-check-your-answers__question">
     Minimum GCSE requirements
   </dt>
@@ -195,7 +195,7 @@
     </a>
   </dd>
   {% endif %}
-</div>
+</div> -->
 <div class="app-check-your-answers__contents">
   <dt class="app-check-your-answers__question">
     Applications open
