--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -1,4 +1,4 @@
-{% set title = 'Minimum GCSE requirements' %}
+{% set title = 'Who will you consider?' %}
 {% extends "layout.html" %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
@@ -17,103 +17,58 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form action="{{ paths.next }}" method="post">
+
+
         <!-- [ ] Applicants need a minimum GCSE grade A* to C, 4 or more, or an equivalent
           * Do not accept applications from candidates who need to take an equivalence test
           * Do not accept applications from candidates who do not have the qualification but expect to have it before the course begins -->
 
-        <p>Applicants need a minimum of GCSE grade C (or 4), or an equivalent in:</p>
+        <p>For {{ data[code + '-phase'] | lower }} courses applicants will need a minimum GCSE grade of C (or 4), or an equivalent,&nbsp;in:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>English</li>
+          <li>Mathematics</li>
+          {% if data[code + '-phase'] == 'Primary' %}
+            <li>Science</li>
+          {% endif %}
+        </ul>
+
+        <h2 class="govuk-heading-l">Pick an option</h2>
 
         {% set moreTextOptions = [
           {
             name: 'Option A (most flexible)',
             text: '<p>Receive applications from candidates who:</p>
                    <ul class="govuk-list govuk-list--bullet">
-                    <li>have the qualification when they apply</li>
-                    <li>expect to have it before the course begins</li>
+                    <li>have these qualifications when they apply</li>
+                    <li>expect to have them before the course begins</li>
                     <li>need to take an equivalency test</li>
-                  </ul>',
-            selected: true
+                  </ul>'
           },
           {
             name: 'Option B',
             text: '<p>Receive applications from candidates who:</p>
                    <ul class="govuk-list govuk-list--bullet">
-                    <li>have the qualification when they apply</li>
-                    <li>expect to have it before the course begins</li>
+                    <li>have these qualifications when they apply</li>
+                    <li>expect to have them before the course begins</li>
                   </ul>
                   <p>Reject candidates who need to take an equivalency test</p>'
           },
           {
             name: 'Option C (least flexible)',
-            text: '<p>Only receive applications from candidates who have the qualification when they apply.</p>
+            text: '<p>Only receive applications from candidates who have these qualifications when they apply.</p>
                   <p>Reject candidates who:</p>
                   <ul class="govuk-list govuk-list--bullet">
-                    <li>don’t have the qualification when they apply</li>
+                    <li>don’t have all the qualifications when they apply</li>
                     <li>need to take an equivalency test</li>
                   </ul>'
           }
         ] %}
 
-        {% set defaultText %}
-          <div class="js-hide-on-toggle">
-            <p>Receive applications from candidates who:</p>
-            <ul class="govuk-list govuk-list--bullet">
-              <li>have the qualification</li>
-              <li>expect to have it before the course begins</li>
-              <li>need to take an equivalency test</li>
-            </ul>
-            <p>
-              <a href="#change" class="js-toggle">Change</a>
-            </p>
-          </div>
-        {% endset %}
+        {{ macros.radioGroup(code + '-who-apply-type', moreTextOptions, errors) }}
 
-        {% set englishMoreText %}
-          <div data-module="toggle-form">
-            <div style="display: none" class="js-hidden-form">
-              {{ macros.radioGroup(code + '-min-requirements-type-english', moreTextOptions, errors) }}
-            </div>
-
-            {{ defaultText | safe }}
-          </div>
-        {% endset %}
-
-        {% set mathsMoreText %}
-          <div data-module="toggle-form">
-            <div style="display: none" class="js-hidden-form">
-              {{ macros.radioGroup(code + '-min-requirements-type-maths', moreTextOptions, errors) }}
-            </div>
-
-            {{ defaultText | safe }}
-          </div>
-        {% endset %}
-
-        {% set scienceMoreText %}
-          <div data-module="toggle-form">
-            <div style="display: none" class="js-hidden-form">
-              {{ macros.radioGroup(code + '-min-requirements-type-science', moreTextOptions, errors) }}
-            </div>
-
-            {{ defaultText | safe }}
-          </div>
-        {% endset %}
-
-        {{ macros.checkboxGroup(code + '-min-requirements', [
-          {
-            name: 'English',
-            more: englishMoreText
-          },
-          {
-            name: 'Mathematics',
-            more: mathsMoreText
-          },
-          {
-            name: 'Science',
-            more: scienceMoreText
-          }
-        ], errors) }}
-
-        <input type="submit" class="govuk-button" value="Continue" />
+        <div class="govuk-form-group">
+          <input type="submit" class="govuk-button" value="Continue" />
+        </div>
       </form>
     </div>
   </div>
