Put Who can apply into check answers

--- a/app/assets/sass/patterns/_check-your-answers.scss
+++ b/app/assets/sass/patterns/_check-your-answers.scss
@@ -6,6 +6,10 @@
   @include govuk-media-query($from: desktop) {
     display: table;
   }
+
+  .govuk-details {
+    margin-bottom: 0
+  }
 }
 
 .app-check-your-answers--short {
