--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -170,6 +170,27 @@
 {% endif %}
 <div class="app-check-your-answers__contents">
   <dt class="app-check-your-answers__question">
+    Applications open
+  </dt>
+  <dd class="app-check-your-answers__answer">
+    {% if data[code + '-applications-open'] == 'On a specific date' %}
+      On {{ data[code + '-applications-open-date-day'] }}-{{ data[code + '-applications-open-date-month'] }}-{{ data[code + '-applications-open-date-year'] }}
+    {% elseif data[code + '-applications-open'] == 'When I publish the course' %}
+        When the course is published
+    {% else %}
+      {{ data[code + '-applications-open'] }}
+    {% endif %}
+  </dd>
+  {% if showChangeLinks %}
+  <dd class="app-check-your-answers__change">
+    <a href="/new/{{ code }}/applications-open?change=applications-open">
+      Change<span class="govuk-visually-hidden"> start date</span>
+    </a>
+  </dd>
+  {% endif %}
+</div>
+<div class="app-check-your-answers__contents">
+  <dt class="app-check-your-answers__question">
     Who will you consider?
   </dt>
   <dd class="app-check-your-answers__answer">
@@ -183,20 +204,20 @@
         {% endif %}
       </ul>
 
-      {% if data[code + '-who-apply-type'].includes('Option A') %}
+      {% if data[code + '-who-apply-type'] and data[code + '-who-apply-type'].includes('Option A') %}
         <p class="govuk-body-s">Receive applications from candidates who:</p>
         <ul class="govuk-list govuk-list--bullet govuk-body-s">
           <li>have these qualifications when they apply</li>
           <li>expect to have them before the course begins</li>
           <li>need to take an equivalency test</li>
         </ul>
-      {% elseif data[code + '-who-apply-type'] == 'Option B' %}
+      {% elseif data[code + '-who-apply-type'] and data[code + '-who-apply-type'] == 'Option B' %}
         <p class="govuk-body-s">Receive applications from candidates who:</p>
         <ul class="govuk-list govuk-list--bullet govuk-body-s">
           <li>have these qualifications when they apply</li>
           <li>expect to have them before the course begins</li>
         </ul>
-      {% else %}
+      {% elseif data[code + '-who-apply-type'] %}
         <p class="govuk-body-s">Only receive applications from candidates who have these qualifications when they apply.</p>
         <p class="govuk-body-s">Reject candidates who:</p>
         <ul class="govuk-list govuk-list--bullet govuk-body-s">
@@ -215,27 +236,6 @@
   <dd class="app-check-your-answers__change">
     <a href="/new/{{ code }}/eligibility?change=eligibility">
       Change<span class="govuk-visually-hidden"> minimum requirements</span>
-    </a>
-  </dd>
-  {% endif %}
-</div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
-    Applications open
-  </dt>
-  <dd class="app-check-your-answers__answer">
-    {% if data[code + '-applications-open'] == 'On a specific date' %}
-      On {{ data[code + '-applications-open-date-day'] }}-{{ data[code + '-applications-open-date-month'] }}-{{ data[code + '-applications-open-date-year'] }}
-    {% elseif data[code + '-applications-open'] == 'When I publish the course' %}
-        When the course is published
-    {% else %}
-      {{ data[code + '-applications-open'] }}
-    {% endif %}
-  </dd>
-  {% if showChangeLinks %}
-  <dd class="app-check-your-answers__change">
-    <a href="/new/{{ code }}/applications-open?change=applications-open">
-      Change<span class="govuk-visually-hidden"> start date</span>
     </a>
   </dd>
   {% endif %}
