Fix cancel vacancies path

--- a/app/views/course/vacancies.html
+++ b/app/views/course/vacancies.html
@@ -119,7 +119,7 @@
         </div>
 
         <p>
-          <p><a href="{{ course.path }}">Cancel changes</a></p>
+          <p><a href="/courses">Cancel changes</a></p>
         </p>
       </form>
     </div>
