--- a/app/views/new-location/_answers.html
+++ b/app/views/new-location/_answers.html
@@ -11,23 +11,49 @@
     </a>
   </dd>
 </div>
-<!-- <div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
-    Location
-  </dt>
-  <dd class="app-check-your-answers__answer">
-    {{ data[code + '-location-picked'] }}
-  </dd>
-  <dd class="app-check-your-answers__change">
-    <a href="/new-location/{{ code }}/pick-location?change=pick-location">
-      Change<span class="govuk-visually-hidden"> location</span>
-    </a>
-  </dd>
-</div> -->
-{% if data[code + '-location-picked'] %}
+{% if data[code + '-location-type'] == 'A region or area' %}
   <div class="app-check-your-answers__contents">
     <dt class="app-check-your-answers__question">
-      Location picked
+      Region name
+    </dt>
+    <dd class="app-check-your-answers__answer">
+      {{ data[code + '-region-name'] }}
+    </dd>
+    <dd class="app-check-your-answers__change">
+      <a href="/new-location/{{ code }}/region-name?change=region-name">
+        Change<span class="govuk-visually-hidden"> region name</span>
+      </a>
+    </dd>
+  </div>
+  <div class="app-check-your-answers__contents">
+    <dt class="app-check-your-answers__question">
+      Schools
+    </dt>
+    <dd class="app-check-your-answers__answer">
+      {% if data[code + '-area-school-names'] %}
+        <ul class="govuk-list remove-bottom-margin">
+          {% if isArray(data[code + '-area-school-names']) %}
+            {% for school in data[code + '-area-school-names'] %}
+              <li>{{ school }}</li>
+            {% endfor %}
+          {% else %}
+            <li>{{ data[code + '-area-school-names'] }}</li>
+          {% endif %}
+        </ul>
+      {% else %}
+        None
+      {% endif %}
+    </dd>
+    <dd class="app-check-your-answers__change">
+      <a href="/new-location/{{ code }}/region-schools?change=region-schools">
+        Change<span class="govuk-visually-hidden"> schools</span>
+      </a>
+    </dd>
+  </div>
+{% else %}
+  <!-- <div class="app-check-your-answers__contents">
+    <dt class="app-check-your-answers__question">
+      Location
     </dt>
     <dd class="app-check-your-answers__answer">
       {{ data[code + '-location-picked'] }}
@@ -37,57 +63,28 @@
         Change<span class="govuk-visually-hidden"> location</span>
       </a>
     </dd>
-  </div>
-{% endif %}
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
-    Name
-  </dt>
-  <dd class="app-check-your-answers__answer">
-    {{ data[code + '-name'] }}
-  </dd>
-  <dd class="app-check-your-answers__change">
-    <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
-      Change<span class="govuk-visually-hidden"> location</span>
-    </a> -->
-  </dd>
-</div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
-    Address
-  </dt>
-  <dd class="app-check-your-answers__answer">
-    {{ data[code + '-address']}}<br />
-    {{ data[code + '-town'] or data[code + '-county'] }}<br />
-    {{ data[code + '-postcode'] }}
-  </dd>
-  <dd class="app-check-your-answers__change">
-    <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
-      Change<span class="govuk-visually-hidden"> location</span>
-    </a> -->
-  </dd>
-</div>
-<div class="app-check-your-answers__contents">
-  <dt class="app-check-your-answers__question">
-    Website
-  </dt>
-  <dd class="app-check-your-answers__answer">
-    <a href="{{ data[code + '-url'] }}" rel="noopener noreferrer" target="_blank">{{ data[code + '-url'] }}</a>
-  </dd>
-  <dd class="app-check-your-answers__change">
-    <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
-      Change<span class="govuk-visually-hidden"> website</span>
-    </a> -->
-  </dd>
-</div>
-{% if data[code + '-urn'] %}
+  </div> -->
+  {% if data[code + '-location-picked'] %}
+    <div class="app-check-your-answers__contents">
+      <dt class="app-check-your-answers__question">
+        Location picked
+      </dt>
+      <dd class="app-check-your-answers__answer">
+        {{ data[code + '-location-picked'] }}
+      </dd>
+      <dd class="app-check-your-answers__change">
+        <a href="/new-location/{{ code }}/pick-location?change=pick-location">
+          Change<span class="govuk-visually-hidden"> location</span>
+        </a>
+      </dd>
+    </div>
+  {% endif %}
   <div class="app-check-your-answers__contents">
     <dt class="app-check-your-answers__question">
-      Unique reference number (URN)
+      Name
     </dt>
     <dd class="app-check-your-answers__answer">
-      {{ data[code + '-urn'] }}<br />
-      <a rel="noopener noreferrer" target="_blank" class="govuk-body-s" href="https://get-information-schools.service.gov.uk/Establishments/Establishment/Details/{{ data[code + '-urn'] }}">View on the Get information about schools service</a>
+      {{ data[code + '-name'] }}
     </dd>
     <dd class="app-check-your-answers__change">
       <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
@@ -95,6 +92,50 @@
       </a> -->
     </dd>
   </div>
+  <div class="app-check-your-answers__contents">
+    <dt class="app-check-your-answers__question">
+      Address
+    </dt>
+    <dd class="app-check-your-answers__answer">
+      {{ data[code + '-address']}}<br />
+      {{ data[code + '-town'] or data[code + '-county'] }}<br />
+      {{ data[code + '-postcode'] }}
+    </dd>
+    <dd class="app-check-your-answers__change">
+      <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
+        Change<span class="govuk-visually-hidden"> location</span>
+      </a> -->
+    </dd>
+  </div>
+  <div class="app-check-your-answers__contents">
+    <dt class="app-check-your-answers__question">
+      Website
+    </dt>
+    <dd class="app-check-your-answers__answer">
+      <a href="{{ data[code + '-url'] }}" rel="noopener noreferrer" target="_blank">{{ data[code + '-url'] }}</a>
+    </dd>
+    <dd class="app-check-your-answers__change">
+      <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
+        Change<span class="govuk-visually-hidden"> website</span>
+      </a> -->
+    </dd>
+  </div>
+  {% if data[code + '-urn'] %}
+    <div class="app-check-your-answers__contents">
+      <dt class="app-check-your-answers__question">
+        Unique reference number (URN)
+      </dt>
+      <dd class="app-check-your-answers__answer">
+        {{ data[code + '-urn'] }}<br />
+        <a rel="noopener noreferrer" target="_blank" class="govuk-body-s" href="https://get-information-schools.service.gov.uk/Establishments/Establishment/Details/{{ data[code + '-urn'] }}">View on the Get information about schools service</a>
+      </dd>
+      <dd class="app-check-your-answers__change">
+        <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
+          Change<span class="govuk-visually-hidden"> location</span>
+        </a> -->
+      </dd>
+    </div>
+  {% endif %}
 {% endif %}
 <div class="app-check-your-answers__contents">
   <dt class="app-check-your-answers__question">
