--- a/app/views/new-location/type.html
+++ b/app/views/new-location/type.html
@@ -15,7 +15,7 @@
               name: 'A school, college or university'
             },
             {
-              name: 'A region or area'
+              name: 'A region or area representing many schools'
             },
             {
               name: 'A place that’s not a school, college or university',
