Save locations at end of journey

--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -26,6 +26,10 @@
     <li>add new training locations</li>
   </ul>
 
+  <p>
+    Candidates choose from a list of training locations when they apply for a&nbsp;course.
+  </p>
+
   {{ govukWarningText({
     text: "You are limited to 37 training locations by UCAS Apply",
     iconFallbackText: "Warning"
