Add map to confirm location page

--- a/app/views/new-location/_answers.html
+++ b/app/views/new-location/_answers.html
@@ -127,7 +127,7 @@
       </dt>
       <dd class="govuk-summary-list__value">
         {{ data[code + '-urn'] }}<br />
-        <a rel="noopener noreferrer" target="_blank" class="govuk-body-s" href="https://get-information-schools.service.gov.uk/Establishments/Establishment/Details/{{ data[code + '-urn'] }}">View on the Get information about schools service</a>
+        <!-- <a rel="noopener noreferrer" target="_blank" class="govuk-body-s" href="https://get-information-schools.service.gov.uk/Establishments/Establishment/Details/{{ data[code + '-urn'] }}">View on the Get information about schools service</a> -->
       </dd>
       <dd class="govuk-summary-list__actions">
         <!-- <a href="/new-location/{{ code }}/pick-location?change=pick-location">
