--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -17,6 +17,8 @@ $button-colour: #00823b;
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
+@import "components/map";
+
 blockquote {
   margin: 0;
 }
